--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,3 +43,243 @@
   justify-content: space-evenly;
   flex-direction: column;
 }
+
+#cityNameBox {
+  width: 100%;
+  height: 10%;
+
+  .cityName {
+    @include c-center;
+    width: 100%;
+    height: 100%;
+
+    p {
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      line-height: 2.5;
+      text-align: center;
+
+      &:first-child {
+        width: 241px;
+        height: 33px;
+        font-size: 1.35rem;
+      }
+      &:last-child {
+        width: 160px;
+        height: 19px;
+        font-size: 0.9rem;
+        font-weight: 100;
+      }
+    }
+  }
+}
+
+#contentBox {
+  width: 100%;
+  height: 62.5%;
+
+  .buttonBox {
+    @include center;
+    width: 100%;
+    height: 20%;
+
+    .buttonBackground {
+      width: 224px;
+      height: 35px;
+      background-color: #052137;
+      border-radius: 10px;
+      display: flex;
+      button {
+        width: 112px;
+        height: 35px;
+        border: 0;
+        border-radius: 7.5px;
+        outline: 0;
+        cursor: pointer;
+
+        &.forecast {
+          background: #0889ff;
+          color: #fff;
+        }
+        &.airquality {
+          background: transparent;
+          color: #467599;
+        }
+      }
+    }
+  }
+
+  .weatherBox {
+    width: 100%;
+    height: 60%;
+
+    .weatherDegree {
+      @include center;
+      width: 100%;
+      height: 15%;
+
+      p {
+        font-size: 3.5rem;
+        font-weight: 500;
+        font-family: 'Be Vietnam Pro', sans-serif;
+        color: #fff;
+      }
+    }
+
+    .weatherIcon {
+      @include center;
+      width: 100%;
+      height: 60%;
+
+      img {
+        width: 168px;
+        height: 160px;
+      }
+    }
+
+    .weatherData {
+      display: flex;
+      width: 100%;
+      height: 25%;
+
+      .detailData {
+        @include c-center;
+        width: 33.33%;
+        height: 100%;
+
+        &:nth-child(1) {
+          margin-left: 10px;
+        }
+        &:nth-child(2) {
+          margin-left: 0 -10px;
+        }
+        &:nth-child(3) {
+          margin-right: 10px;
+        }
+        p {
+          line-height: 1.5;
+          color: #fff;
+
+          &:first-child {
+            font-size: 1rem;
+            font-weight: 300;
+            font-family: 'Noto Sans KR', sans-serif;
+            opacity: 0.5;
+          }
+          &:last-child {
+            font-size: 1rem;
+            font-weight: 200;
+            font-family: 'Poppins', sans-serif;
+          }
+        }
+      }
+    }
+  }
+}
+
+#todayWeather {
+  width: 100%;
+  height: 17.5%;
+  .textBox {
+    @include center-sb;
+    width: calc(100% - 70px);
+    height: 35%;
+    padding: 0 35px;
+    font-family: 'Noto Sans KR', sans-serif;
+    p {
+      font-weight: 400;
+      font-size: 0.8rem;
+      color: #fff;
+      text-align: center;
+      &:nth-child(2) {
+        font-weight: normal;
+        color: #0085ff;
+        cursor: pointer;
+        margin-bottom: 2px;
+      }
+    }
+  }
+  .timelyWeatherBox {
+    display: flex;
+    align-items: center;
+    width: calc(100% - 65%);
+    height: 65%;
+    padding: 0 30px;
+    padding-right: 0;
+
+    .timelyWeather {
+      display: flex;
+      width: 126px;
+      height: 70px;
+      background: #0989ff;
+      border-radius: 20px;
+
+      .icon {
+        @include center;
+        width: 45%;
+        height: 100%;
+        img {
+          width: 100%;
+        }
+      }
+      .data {
+        @include c-center-se;
+        width: 55%;
+        height: 100%;
+
+        p {
+          color: whitesmoke;
+          font-family: 'Poppins', sans-serif;
+          text-align: center;
+
+          &.time {
+            font-size: 0.8rem;
+            font-weight: 200;
+            margin-top: 7.5px;
+          }
+          &.currentDegree {
+            font-size: 1.2rem;
+            margin-top: 7.5px;
+          }
+        }
+        div {
+          @include center;
+          width: 100%;
+          height: 33.33%;
+          img {
+            height: 55%;
+          }
+          .fall {
+            font-size: 0.9rem;
+            margin-top: 1.5px;
+          }
+        }
+      }
+    }
+  }
+}
+
+nav {
+  @include center-se;
+  width: 100%;
+  height: 10%;
+  //padding: 0 50px;
+
+  i {
+    max-width: 20px;
+    color: rgba(255, 255, 255, 1);
+    font-size: 1.15rem;
+    cursor: pointer;
+    svg {
+      width: 100%;
+      fill: #fff;
+      transition: all 0.2s ease;
+    }
+
+    &:hover {
+      svg {
+        fill: #799ed0;
+      }
+    }
+  }
+}
